--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "axios": "^0.20.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
@@ -36,6 +37,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.0",
     "postcss": "^8.0.5",
     "postcss-loader": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -66,5 +68,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "staticFiles": {
+    "staticPath": "../static"
+  }
 }
