--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
@@ -18,7 +18,8 @@
     "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "vue": "^2.6.11",
-    "vue2-leaflet": "^2.5.2"
+    "vue2-leaflet": "^2.5.2",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
