--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ psycopg2-binary==2.8.5
 boto3==1.12.39
 djangorestframework-gis==0.16
 django-extensions==3.0.8
+django-allauth==0.44.0
 pandas == 1.1.0
