--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django==3.1.1
+Django==3.1.5
 django-filter==2.2.0
 django-storages==1.9.1
-djangorestframework==3.11.1
+djangorestframework==3.12.2
 gunicorn==20.0.4
 Pillow==7.1.2
 django-heroku==0.3.1
@@ -12,4 +12,5 @@ boto3==1.12.39
 djangorestframework-gis==0.16
 django-extensions==3.0.8
 django-allauth==0.44.0
+dj-rest-auth==2.1.3
 pandas == 1.1.0
