--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.9.0",
     "bulma-switch": "^2.0.0",
     "core-js": "^3.6.5",
+    "heatmap.js": "^2.0.5",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.5.2",
@@ -34,7 +35,7 @@
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "^1.3.1",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "postcss": "^8.0.5",
     "postcss-loader": "^4.0.2",
