--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ djangorestframework-gis==0.16
 django-extensions==3.0.8
 django-allauth==0.44.0
 dj-rest-auth==2.1.3
-pandas == 1.1.0
+redis==3.5.3
