--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.7.1",
+    "leaflet-webgl-heatmap": "^0.2.7",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.5.2",
     "vuex": "^3.6.0"
