--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,48 +7,17 @@
     "build": "parcel build src/main.js -d ../static"
   },
   "dependencies": {
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "axios": "^0.21.1",
-    "bulma": "^0.9.0",
-    "bulma-switch": "^2.0.0",
-    "core-js": "^3.6.5",
-    "heatmap.js": "^2.0.5",
+    "bulma": "^0.9.2",
     "leaflet": "^1.7.1",
-    "leaflet-webgl-heatmap": "^0.2.7",
-    "vue": "^2.6.11",
-    "vue2-leaflet": "^2.5.2",
-    "vuex": "^3.6.0"
+    "vue": "^2.6.14",
+    "vue-hot-reload-api": "^2.3.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^4.4.1",
-    "mini-css-extract-plugin": "^0.11.2",
-    "node-sass": "^4.14.1",
-    "parcel-bundler": "^1.3.1",
-    "parcel-plugin-static-files-copy": "^2.5.0",
-    "postcss": "^8.0.5",
-    "postcss-loader": "^4.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-vue2": "^0.8.1",
-    "sass-loader": "^10.0.2",
-    "vue-loader": "^15.9.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "@vue/component-compiler-utils": "^3.2.0",
+    "sass": "^1.34.1",
+    "vue-template-compiler": "^2.6.14"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
