--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
+    "cssnano": "^5.0.5",
+    "postcss": "^8.3.0",
     "sass": "^1.34.1",
     "vue-template-compiler": "^2.6.14"
   },
